log
Thu 28 Mar 2024 02:35:08 PM UTC: 
 tests:  0|6
total_score: 0/70
a531de1
Thu 28 Mar 2024 02:40:32 PM UTC: 
 list.c | 8 +++++++-
 1 file changed, 7 insertions(+), 1 deletion(-)
 tests:  1|5
total_score: 10/70
b3b296d
Thu 28 Mar 2024 02:43:08 PM UTC: 
 list.c | 8 ++++++++
 1 file changed, 8 insertions(+)
 tests:  2|5
total_score: 15/70
71e9ae4
Thu 28 Mar 2024 02:45:58 PM UTC: 
 list.c | 14 ++++++++++++++
 1 file changed, 14 insertions(+)
 tests:  5|4
total_score: 25/70
cf662a9
Thu 28 Mar 2024 02:48:33 PM UTC: 
 list.c | 11 +++++++++++
 1 file changed, 11 insertions(+)
 tests:  6|4
total_score: 25/70
e36d7ed
Thu 28 Mar 2024 02:50:26 PM UTC: 
 list.c | 16 ++++++++++++++++
 1 file changed, 16 insertions(+)
 tests:  9|3
total_score: 35/70
a6a97a2
Thu 28 Mar 2024 02:55:34 PM UTC: 
 list.c | 13 +++++++++++++
 1 file changed, 13 insertions(+)
 tests:  10|2
total_score: 45/70
b52b97e
Thu 28 Mar 2024 03:02:38 PM UTC: 
 list.c | 18 ++++++++++++++++++
 1 file changed, 18 insertions(+)
 tests:  10|2
total_score: 45/70
6453312
Thu 28 Mar 2024 03:05:59 PM UTC: 
 list.c | 5 +++--
 1 file changed, 3 insertions(+), 2 deletions(-)
 tests:  11|1
total_score: 55/70
b6572e3
Thu 28 Mar 2024 03:09:36 PM UTC: 
 list.c | 14 +++++++++++++-
 1 file changed, 13 insertions(+), 1 deletion(-)
/nix/store/039g378vc3pc3dvi9dzdlrd0i4q93qwf-binutils-2.39/bin/ld: /tmp/ccoL60hI.o: in function `test_popcurrent':
test.c:(.text+0xa99): undefined reference to `popCurrent'
/nix/store/039g378vc3pc3dvi9dzdlrd0i4q93qwf-binutils-2.39/bin/ld: test.c:(.text+0xb17): undefined reference to `popCurrent'
/nix/store/039g378vc3pc3dvi9dzdlrd0i4q93qwf-binutils-2.39/bin/ld: test.c:(.text+0xb7b): undefined reference to `popCurrent'
/nix/store/039g378vc3pc3dvi9dzdlrd0i4q93qwf-binutils-2.39/bin/ld: /tmp/ccoL60hI.o: in function `popFront':
test.c:(.text+0x228): undefined reference to `popCurrent'
/nix/store/039g378vc3pc3dvi9dzdlrd0i4q93qwf-binutils-2.39/bin/ld: /tmp/ccoL60hI.o: in function `popBack':
test.c:(.text+0x239): undefined reference to `popCurrent'
collect2: error: ld returned 1 exit status
Compilation failed
beea5d3
Thu 28 Mar 2024 03:09:55 PM UTC: 
 list.c | 8 ++++----
 1 file changed, 4 insertions(+), 4 deletions(-)
In file included from test.c:5:
list.c:159:2: error: expected identifier or ‘(’ before ‘void’
  159 | *void * popCurrent(List * list) {
      |  ^~~~
Compilation failed
a38b5b4
Thu 28 Mar 2024 03:10:14 PM UTC: 
 list.c | 2 +-
 1 file changed, 1 insertion(+), 1 deletion(-)
 tests:  11|1
total_score: 55/70
99faec9
Fri 29 Mar 2024 11:01:43 PM UTC: 
 list.c | 4 ++--
 1 file changed, 2 insertions(+), 2 deletions(-)
 tests:  11|1
total_score: 55/70
5a4c085
Fri 29 Mar 2024 11:05:23 PM UTC: 
 list.c | 10 +++++++++-
 1 file changed, 9 insertions(+), 1 deletion(-)
In file included from test.c:5:
list.c: In function ‘popCurrent’:
list.c:175:11: error: ‘List’ {aka ‘struct List’} has no member named ‘cuttent’; did you mean ‘current’?
  175 |     list->cuttent->next->prev = list->current->prev;
      |           ^~~~~~~
      |           current
Compilation failed
bc6736d
Fri 29 Mar 2024 11:05:33 PM UTC: 
 list.c | 2 +-
 1 file changed, 1 insertion(+), 1 deletion(-)
 tests:  0|0
1fd5a74
Fri 29 Mar 2024 11:11:56 PM UTC: 
 list.c | 6 ++++++
 1 file changed, 6 insertions(+)
 tests:  0|0
9ba15fd
Fri 29 Mar 2024 11:14:03 PM UTC: 
 list.c | 15 +++------------
 1 file changed, 3 insertions(+), 12 deletions(-)
 tests:  0|0
a426a1d
